<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/llayout_fromtime"
        style="@style/fragmain_llayout_content" >

        <TextView
            android:id="@+id/txv_fromtime"
            style="@style/fragmain_txv"
            android:text="@string/fragreq_fromtime" />
        
          <Button
            android:id="@+id/edtdate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:focusable="false" />

        <!-- <TextView -->
        <!-- android:id="@+id/txvchoosetime" -->
        <!-- style="@style/wrap_wrap" -->
        <!-- android:layout_marginLeft="10dp" -->
        <!-- android:text="@string/strsettimes" /> -->

        <Button
            android:id="@+id/edttime"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />

        <!--
        <DatePicker 
            android:id="@+id/date_fromtime"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
        <TimePicker 
            android:id="@+id/time_fromtime"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
        -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llayout_totime"
        style="@style/fragmain_llayout_content" >

        <TextView
            android:id="@+id/txv_totime"
            style="@style/fragmain_txv"
            android:text="@string/fragreq_totime" />
         <Button
            android:id="@+id/edtlastdate"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <!-- <TextView -->
        <!-- android:id="@+id/txvlasttime" -->
        <!-- style="@style/wrap_wrap" -->
        <!-- android:layout_marginLeft="10dp" -->
        <!-- android:text="@string/strsettimes" /> -->

        <Button
            android:id="@+id/edtlasttimeinfo"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
        <!--
        <DatePicker 
            android:id="@+id/date_totime"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
        <TimePicker 
            android:id="@+id/time_totime"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
        -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llayout_reason"
        style="@style/fragmain_llayout_content" >

        <TextView
            android:id="@+id/txv_reason"
            style="@style/fragmain_txv"
            android:text="@string/fragreq_reason" />

        <EditText
                android:id="@+id/edtreson"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/resonhint"
                android:inputType="textMultiLine"
                android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llayout_type"
        style="@style/fragmain_llayout_content" >

        <TextView
            android:id="@+id/txv_type"
            style="@style/fragmain_txv"
            android:text="@string/fragreq_type" />

        <Spinner
            android:id="@+id/spn_type"
            android:layout_width="200dp"
            android:layout_height="38dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llayout_account"
        style="@style/fragmain_llayout_content" >

        <TextView
            android:id="@+id/txv_account_pre"
            style="@style/fragmain_txv"
            android:text="@string/fragmain_account_pre" />

        <TextView
            android:id="@+id/txv_account"
            style="@style/fragmain_txv" />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/llayout_btn"
        style="@style/fragmain_llayout_content"
        android:layout_margin="0dp"
        >
        
         <Button 
           style="@style/fragmain_btn"
        android:id="@+id/btn_update"
        android:text="@string/fragmain_btnupdate"
        android:layout_margin="10dp"
        />
        <Button
            android:layout_margin="10dp"
            android:id="@+id/btn_cancel"
            android:text="@string/fragmain_btncancel"
            style="@style/fragmain_btn"
            />
        
    </LinearLayout>
   
</LinearLayout>
