<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk_login"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <EditText
        android:id="@+id/edt_username"
        style="@style/match_wrap"
        android:layout_marginTop="180dp"
        android:background="@drawable/input_username"
        android:hint="@string/login_username_hint"
        android:paddingLeft="55dp"
        android:saveEnabled="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txv_username"
        style="@style/wrap_wrap"
        android:layout_alignBottom="@id/edt_username"
        android:layout_alignLeft="@id/edt_username"
        android:layout_alignTop="@id/edt_username"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="7dp"
        android:text="@string/login_username"
        android:textColor="#ff3f3f3f"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_password"
        style="@style/wrap_wrap"
        android:layout_alignLeft="@id/edt_username"
        android:layout_alignRight="@id/edt_username"
        android:layout_below="@id/edt_username"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_password"
        android:hint="@string/login_userpassword_hind"
        android:inputType="textPassword"
        android:maxLength="12"
        android:paddingLeft="55dp"
        android:saveEnabled="true" />
    

    <TextView
        android:id="@+id/txv_password"
        style="@style/wrap_wrap"
        android:layout_alignBottom="@id/edt_password"
        android:layout_alignLeft="@id/txv_username"
        android:layout_alignTop="@id/edt_password"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="7dp"
        android:text="@string/login_password"
        android:textColor="#ff3f3f3f"
        android:textSize="16sp" />

    <ImageButton
        android:contentDescription="@string/login_login_hint"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_password"
        android:background="@drawable/button_login_zh"
        android:layout_marginTop="20dp"
         />

</RelativeLayout>